Version 2.66:    ( Sat Jan 29 18:28:53 IST 2011 )
-------------------------------------------------

* Add support for the handle_trailing_comment option to support trailing
comments at the end of a param=value line.
    - Fixes https://rt.cpan.org/Public/Bug/Display.html?id=43843 .
    - Original patch by Peter Xu.
    - Some comments and corrections of the patch by Shlomi Fish (the current 
    Config-IniFiles maintainer.)

Version 2.65:    ( Thu Nov 25 12:00:00 IST 2010 )
-------------------------------------------------

* Replaced calls to File::Temp's tempfile() with those to its tempdir()
followed by File::Spec->catfile() - hopefully fixes the CPAN smoking failures
on Win32.

Version 2.64:    ( Sat Nov 20 11:47:07 IST 2010 )
-------------------------------------------------

* Fixed https://rt.cpan.org/Ticket/Display.html?id=63177
    - tag-release.pl was installed into lib/Config by EU-MM. Converted the
    Makefile.PL to a wrapper around Build.PL by using Module-Build's
    create_makefile_pl='small' instead of create_makefile_pl='traditional' .

Version 2.63:    ( Fri Nov 19 16:50:58 IST 2010 )
-------------------------------------------------

* Fixed https://rt.cpan.org/Ticket/Display.html?id=63079 by
refactoring/bug-fixing the main module into the _OutputParam method, which
handles the output of multi-line and single-line parameters with all the edge
cases. 
    - The reported problem was that EOT was encountered again in certain cases
    in the output string, and now we make sure the program always avoid it. The
    reappearance of the bug was caused due to duplicate code, which was now
    eliminated.

Version 2.62:     ( Fri Nov 19 15:31:36 IST 2010 )
--------------------------------------------------

* Applied a modified version of Steven Haryanto's commit
ac6ace8bf09fabba4e6ea3b2826ff13cd30507bc :
    - When writing config with fallback section, also omit the fallback 
    section header, like the original file. Also, change