@@ -36,6 +36,7 @@ t/26scalar-filehandle.t
 t/27empty-ini.t
 t/28nomultiline.t
 t/29end-of-line-comment.t
+t/30parameters-with-empty-values.t
 tag-release.pl
 t/allowed-comment-chars.ini
 t/array.ini
